--- a/file/default.css
+++ b/file/default.css
@@ -2,9 +2,9 @@ body {
   margin: 0;
   padding: 0;
   background-image: url('../img2.png');
-  background-size: cover;
+  background-size: 245%;
   background-repeat: no-repeat;
-  font-size: 14px;
+  font-size: 24px;
   font-family: sans-serif;
   color: white;
   overflow: auto;
@@ -18,14 +18,14 @@ a {
 }
 #wrap {
   position: relative;
-  margin: 0 auto;
+  margin:auto;
   width: 1100px;
-  height: 680px;
+  height:680px;
   margin-top: 10px;
 }
 #text {
-  width: 272px;
-  height: 560px;
+  width: 300px;
+  height:500px;
   left: 188px;
   top: 80px;
   position: absolute;
@@ -35,7 +35,7 @@ a {
   color: rgb(196, 255, 255);
   font-size: 16px;
   margin-top: 70px;
-  line-height: 25px;
+  line-height: 35px;
   font-size: larger;
   font-weight: bolder;
 }
