--- a/file/default.css
+++ b/file/default.css
@@ -2,8 +2,8 @@ body {
   margin: 0;
   padding: 0;
   background-image: url('../img2.png');
-  background-size: 110%;
-  background-repeat: no-repeat;
+  background-size: 115%;
+  background-repeat: repeat-x;
   font-size: 24px;
   font-family: sans-serif;
   color: white;
@@ -24,7 +24,7 @@ a {
   margin-top: 10px;
 }
 #text {
-  width: 510px;
+  width: 506px;
   height:500px;
   left: 40px;
   top: 80px;
