--- a/file/default.css
+++ b/file/default.css
@@ -4,7 +4,7 @@ body {
   background-image: url('../img2.png');
   background-size: 115%;
   background-repeat: repeat;
-  font-size: 28px;
+  font-size: 34px;
   font-family: sans-serif;
   color: white;
   overflow: auto;
@@ -26,7 +26,7 @@ a {
 #text {
   width: 525px;
   height:500px;
-  left: 5px;
+  left: px;
   top: 80px;
   position: absolute;
 }
